# leadfinder

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  fl_smoke_output.csv  leadfinder_audit.json  leadfinder_output.csv  pyproject.toml  real_smoke.csv  run.py  smoke_output.csv
backend/app/: events.py  main.py  state.py
backend/app/core/: config.py  logging.py
backend/app/models/: entity.py  report.py  run.py
backend/app/pipeline/: officer_selection.py  orchestrator.py  scoring.py  stage_0_cleaning.py  stage_2_parsing.py  stage_3_sos.py  stage_4_enrichment.py  stage_5_output.py
backend/app/providers/: base.py  browser.py  sos_fl.py  sos_nc.py
backend/app/routers/: download.py  events.py  run.py
backend/scripts/: capture_sunbiz_detail.py  try_real_data.py
backend/tests/: conftest.py  test_browser.py  test_officer_selection.py  test_orchestrator.py  test_provider_base.py  test_scoring.py  test_sos_fl.py  test_sos_nc.py  test_stage_0_cleaning.py  test_stage_1_run.py  test_stage_2_parsing.py  test_stage_3_sos.py  test_stage_5_output.py
backend/tests/fixtures/: real_fl_smoke.csv  sample_input.csv  stage_2_cases.py
backend/tests/fixtures/sos/: fl_detail_rolator.html  fl_real_detail.html  fl_real_results.html  fl_results_empty.html  fl_results_rolator.html  nc_detail_acme.html  nc_results_acme.html  nc_results_empty.html
data/: main_data.csv
docs/design/: step_1_system_understanding.md  step_2_architecture.md  step_3_pipeline_design.md  step_4_confidence_scoring.md  step_5_entity_resolution.md
(+5 files in other folders)
